...
    <string name="error_edit_profile">Error while updating your informations</string>


    <string name="title_activity_register">Create an account</string>

    <string name="title_activity_my_groups">My Groups</string>
    <string name="noGroupsYet">No groups yet ? Click on the + button below to create one !</string>

    <string name="logoutWarning">Are you sure you want to logout ?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>

    <string name="hint_username_activity_register">Username</string>
...
    <string name="hint_lastname_activity_register">Last name</string>
    <string name="hint_phone_activity_register">Phone number</string>
    <string name="hint_email_activity_register">Email</string>
    <string name="hint_confirm_password_activity_register">Confirm password</string>
    <string name="sign_up_activity_register">Sign up</string>

    <string name="emtpy_username_activity_register">Username should not be empty</string>
    <string name="empty_password_activity_register">Password should not be empty</string>
    <string name="empty_email_activity_register">Email should not be empty</string>
    <string name="empty_firstname_activity_register">First name should not be empty</string>
    <string name="empty_lastname_activity_register">Last name should not be empty</string>
    <string name="incorrect_email_activity_register">Email has not a correct format</string>
    <string name="non_matching_passwords_activity_register">Passwords don\'t match</string>
    <string name="incorrect_phone_number_activity_register">A valid phone number should be entered</string>
    <string name="short_password_activity_register">Password is too short</string>
    <string name="long_password_activity_register">Password is too long</string>
    <string name="case_password_activity_register">Password should contain at least a small and a cap letter</string>
    <string name="no_letter_password_activity_register">Password should contain a letter</string>
    <string name="no_number_password_activity_register">Password should contain a number</string>
    <string name="symbol_password_activity_register">Password contains some illegal characters</string>
    <string name="taken_username_activity_register">Username %s already taken</string>
    <string name="taken_email_activity_register">Email %s already taken</string>

    <string name="title_activity_group_home">GroupHomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
...
