...
                android:paddingBottom="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="0dp">

                <EditText
                    android:id="@+id/register_username"
                    style="@style/welcomeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_person_white_24dp"
                    android:hint="@string/hint_username_activity_register"
                    android:inputType="textPersonName"
...
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/register_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_lock_white_24dp"
                    android:hint="@string/hint_password_activity_register"
                    android:inputType="textPassword"
                    android:lines="1"
...
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/register_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_lock_white_24dp"
                    android:hint="@string/hint_confirm_password_activity_register"
                    android:inputType="textPassword"
                    android:lines="1"
...
                        android:onClick="displayHowToPwd"
                        android:id="@+id/pwd_info" />

                </LinearLayout>

                <EditText
                    android:id="@+id/register_firstname"
                    style="@style/welcomeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_person_outline_white_24dp"
                    android:hint="@string/hint_firstname_activity_register"
                    android:inputType="textPersonName"
...
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:weightSum="0.5" />

                <EditText
                    android:id="@+id/register_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_person_outline_white_24dp"
                    android:hint="@string/hint_lastname_activity_register"
                    android:inputType="textPersonName"
                    android:lines="1"
...
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_email_white_24dp"
                    android:hint="@string/hint_email_activity_register"
                    android:inputType="textEmailAddress"
                    android:lines="1"
...
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/register_number"
                    android:clickable="true"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_call_white_24dp"
                    android:hint="@string/hint_phone_activity_register"
...
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_buttons"
                android:onClick="onClickRegister"
                android:text="@string/sign_up_activity_register"
...
