...
                android:inputType="phone"
                android:maxLines="1"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/input_phoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:layout_weight="70"
                android:inputType="phone"
...
